// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`question-planner > advanced workspace > advanced workspace cluster snapshot 1`] = `
{
  "cluster": {
    "phaseCoverage": [
      {
        "documentCount": 1,
        "phaseId": "01-foundation",
        "phaseTitle": "Foundation",
        "questionCount": 5,
      },
    ],
    "questions": [
      {
        "blockingLevel": "blocking",
        "existingOpenQuestionId": undefined,
        "fieldPointer": "centralQuestion",
        "id": "01-thesis::centralQuestion",
        "isSchemaDerived": false,
        "phaseId": "01-foundation",
        "planStatus": "planned",
        "priority": "critical",
        "reason": "document_status_incomplete",
        "sourceDocumentId": "01-thesis",
        "text": "What truth, hypothesis, or conviction justifies this project's existence?",
      },
      {
        "blockingLevel": "blocking",
        "existingOpenQuestionId": undefined,
        "fieldPointer": "sections[0].questions[0]",
        "id": "01-thesis::section::core-thesis::q0",
        "isSchemaDerived": false,
        "phaseId": "01-foundation",
        "planStatus": "planned",
        "priority": "critical",
        "reason": "downstream_blocking",
        "sourceDocumentId": "01-thesis",
        "text": "What is the central thesis?",
      },
      {
        "blockingLevel": "blocking",
        "existingOpenQuestionId": undefined,
        "fieldPointer": "sections[0].questions[1]",
        "id": "01-thesis::section::core-thesis::q1",
        "isSchemaDerived": false,
        "phaseId": "01-foundation",
        "planStatus": "planned",
        "priority": "critical",
        "reason": "downstream_blocking",
        "sourceDocumentId": "01-thesis",
        "text": "What change in the world, market, or human behavior makes this relevant?",
      },
      {
        "blockingLevel": "blocking",
        "existingOpenQuestionId": undefined,
        "fieldPointer": "sections[0].questions[2]",
        "id": "01-thesis::section::core-thesis::q2",
        "isSchemaDerived": false,
        "phaseId": "01-foundation",
        "planStatus": "planned",
        "priority": "critical",
        "reason": "downstream_blocking",
        "sourceDocumentId": "01-thesis",
        "text": "What tension does the project try to resolve?",
      },
      {
        "blockingLevel": "blocking",
        "existingOpenQuestionId": undefined,
        "fieldPointer": "sections[0].questions[3]",
        "id": "01-thesis::section::core-thesis::q3",
        "isSchemaDerived": false,
        "phaseId": "01-foundation",
        "planStatus": "planned",
        "priority": "critical",
        "reason": "downstream_blocking",
        "sourceDocumentId": "01-thesis",
        "text": "What does this project assert that other systems neglect?",
      },
    ],
    "reasonSummary": "Selected 5 questions, 5 blocking; 8860 questions deferred",
    "skippedCount": 8860,
    "sourceDocuments": [
      "01-thesis",
    ],
  },
  "diagnostics": [],
  "success": true,
}
`;

exports[`question-planner > empty workspace > empty workspace cluster snapshot 1`] = `
{
  "cluster": {
    "phaseCoverage": [
      {
        "documentCount": 1,
        "phaseId": "01-foundation",
        "phaseTitle": "Foundation",
        "questionCount": 5,
      },
    ],
    "questions": [
      {
        "blockingLevel": "blocking",
        "existingOpenQuestionId": undefined,
        "fieldPointer": "centralQuestion",
        "id": "01-thesis::centralQuestion",
        "isSchemaDerived": false,
        "phaseId": "01-foundation",
        "planStatus": "planned",
        "priority": "critical",
        "reason": "document_status_incomplete",
        "sourceDocumentId": "01-thesis",
        "text": "What truth, hypothesis, or conviction justifies this project's existence?",
      },
      {
        "blockingLevel": "blocking",
        "existingOpenQuestionId": undefined,
        "fieldPointer": "sections[0].questions[0]",
        "id": "01-thesis::section::core-thesis::q0",
        "isSchemaDerived": false,
        "phaseId": "01-foundation",
        "planStatus": "planned",
        "priority": "critical",
        "reason": "downstream_blocking",
        "sourceDocumentId": "01-thesis",
        "text": "What is the central thesis?",
      },
      {
        "blockingLevel": "blocking",
        "existingOpenQuestionId": undefined,
        "fieldPointer": "sections[0].questions[1]",
        "id": "01-thesis::section::core-thesis::q1",
        "isSchemaDerived": false,
        "phaseId": "01-foundation",
        "planStatus": "planned",
        "priority": "critical",
        "reason": "downstream_blocking",
        "sourceDocumentId": "01-thesis",
        "text": "What change in the world, market, or human behavior makes this relevant?",
      },
      {
        "blockingLevel": "blocking",
        "existingOpenQuestionId": undefined,
        "fieldPointer": "sections[0].questions[2]",
        "id": "01-thesis::section::core-thesis::q2",
        "isSchemaDerived": false,
        "phaseId": "01-foundation",
        "planStatus": "planned",
        "priority": "critical",
        "reason": "downstream_blocking",
        "sourceDocumentId": "01-thesis",
        "text": "What tension does the project try to resolve?",
      },
      {
        "blockingLevel": "blocking",
        "existingOpenQuestionId": undefined,
        "fieldPointer": "sections[0].questions[3]",
        "id": "01-thesis::section::core-thesis::q3",
        "isSchemaDerived": false,
        "phaseId": "01-foundation",
        "planStatus": "planned",
        "priority": "critical",
        "reason": "downstream_blocking",
        "sourceDocumentId": "01-thesis",
        "text": "What does this project assert that other systems neglect?",
      },
    ],
    "reasonSummary": "Selected 5 questions, 5 blocking; 8881 questions deferred",
    "skippedCount": 8881,
    "sourceDocuments": [
      "01-thesis",
    ],
  },
  "diagnostics": [],
  "success": true,
}
`;

exports[`question-planner > partial workspace > partial workspace cluster snapshot 1`] = `
{
  "cluster": {
    "phaseCoverage": [
      {
        "documentCount": 1,
        "phaseId": "01-foundation",
        "phaseTitle": "Foundation",
        "questionCount": 5,
      },
    ],
    "questions": [
      {
        "blockingLevel": "blocking",
        "existingOpenQuestionId": undefined,
        "fieldPointer": "centralQuestion",
        "id": "01-thesis::centralQuestion",
        "isSchemaDerived": false,
        "phaseId": "01-foundation",
        "planStatus": "planned",
        "priority": "critical",
        "reason": "document_status_incomplete",
        "sourceDocumentId": "01-thesis",
        "text": "What truth, hypothesis, or conviction justifies this project's existence?",
      },
      {
        "blockingLevel": "blocking",
        "existingOpenQuestionId": undefined,
        "fieldPointer": "sections[0].questions[0]",
        "id": "01-thesis::section::core-thesis::q0",
        "isSchemaDerived": false,
        "phaseId": "01-foundation",
        "planStatus": "planned",
        "priority": "critical",
        "reason": "downstream_blocking",
        "sourceDocumentId": "01-thesis",
        "text": "What is the central thesis?",
      },
      {
        "blockingLevel": "blocking",
        "existingOpenQuestionId": undefined,
        "fieldPointer": "sections[0].questions[1]",
        "id": "01-thesis::section::core-thesis::q1",
        "isSchemaDerived": false,
        "phaseId": "01-foundation",
        "planStatus": "planned",
        "priority": "critical",
        "reason": "downstream_blocking",
        "sourceDocumentId": "01-thesis",
        "text": "What change in the world, market, or human behavior makes this relevant?",
      },
      {
        "blockingLevel": "blocking",
        "existingOpenQuestionId": undefined,
        "fieldPointer": "sections[0].questions[2]",
        "id": "01-thesis::section::core-thesis::q2",
        "isSchemaDerived": false,
        "phaseId": "01-foundation",
        "planStatus": "planned",
        "priority": "critical",
        "reason": "downstream_blocking",
        "sourceDocumentId": "01-thesis",
        "text": "What tension does the project try to resolve?",
      },
      {
        "blockingLevel": "blocking",
        "existingOpenQuestionId": undefined,
        "fieldPointer": "sections[0].questions[3]",
        "id": "01-thesis::section::core-thesis::q3",
        "isSchemaDerived": false,
        "phaseId": "01-foundation",
        "planStatus": "planned",
        "priority": "critical",
        "reason": "downstream_blocking",
        "sourceDocumentId": "01-thesis",
        "text": "What does this project assert that other systems neglect?",
      },
    ],
    "reasonSummary": "Selected 5 questions, 5 blocking; 8856 questions deferred",
    "skippedCount": 8856,
    "sourceDocuments": [
      "01-thesis",
    ],
  },
  "diagnostics": [],
  "success": true,
}
`;
